<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/food_header_corona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/food_header_corona"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/food_info_corona"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/food_info_corona"
        app:layout_constraintEnd_toEndOf="@+id/food_header_corona"
        app:layout_constraintStart_toStartOf="@+id/food_header_corona"
        app:layout_constraintTop_toBottomOf="@+id/food_header_corona" />

    <TextView
        android:id="@+id/food_info_bmi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/placeholder"
        app:layout_constraintEnd_toEndOf="@+id/food_header_corona"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/food_header_corona"
        app:layout_constraintTop_toBottomOf="@+id/food_info" />

    <TextView
        android:id="@+id/food_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/food_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/food_info_corona"
        app:layout_constraintTop_toBottomOf="@+id/food_info_corona" />

    <TextView
        android:id="@+id/food_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/food_info"
        app:layout_constraintEnd_toEndOf="@+id/food_info_corona"
        app:layout_constraintStart_toStartOf="@+id/food_header"
        app:layout_constraintTop_toBottomOf="@+id/food_header" />

</androidx.constraintlayout.widget.ConstraintLayout>